# CoinkGL.proto

./: CMakeLists.txt  README.md  build.cmd  commit-convention.md  compile_commands.json  run.cmd
.cache/clangd/index/: button.cpp.709D480561E8F640.idx  button.h.07C0CBA8D103A3B1.idx  check_button.cpp.C812BBF97C93A7E5.idx  check_button.h.A6F5FFA4123DF993.idx  coink_enum.h.3422C68F4AB058CF.idx  coink_gl.cpp.5F85BFD0CFCACDF8.idx  coink_gl.h.D9F5688DAF4F5B94.idx  color.h.FE0FE6E0BD253116.idx  color_panel.cpp.9099222D8A721994.idx  color_panel.h.CF3B61970A20D949.idx  container.cpp.D0586DA39638324A.idx  container.h.C619BAB52FF9A638.idx  control.cpp.C4C0A00566169CC3.idx  control.h.8F1C846C419054DC.idx  duck.h.694173E38AF5184E.idx  glad.c.9E3EC5F6F9B0D0E2.idx  glad.h.4BD18343682740F4.idx  (+53 more)
include/GLFW/: glfw3.h  glfw3native.h
include/KHR/: khrplatform.h
include/coink_gl/: coink_gl.h
include/dlg/: dlg.h  output.h
include/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftcolor.h  ftdriver.h  fterrdef.h  fterrors.h  ftfntfmt.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlogging.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsystem.h  fttypes.h  ftwinfnt.h  otsvg.h  t1tables.h  tttables.h
include/glad/: glad.h
include/glm/: geometric.hpp  trigonometric.hpp
include/stb/: stb_image.h
ressource/shader/: default.frag  default.vert
src/: glad.c  main.cpp
src/coink_gl/: coink_gl.cpp
(+69 files in other folders)
